test/netlist/error/duplicated-ram.bop
RAM name (0, 5)
RAM name (0, 5) = text { 00110 }
